--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
 						<element>BUNDLE</element>
 						<limits>
 						<limit>
-							<counter>LINE</counter>
+							<counter>BRANCH</counter>
 							<value>COVEREDRATIO</value>
 							<minimum>1</minimum>
 						</limit>
