Se integra OpenApi para documentacion de codigo

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,15 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- Dependencia para documentar automáticamente con OAS -->
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+        
     </dependencies>
 
     <build>
