--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+
+    <!-- SpringDoc OpenAPI para documentación de microservicios -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
