--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,16 @@
-sonar.projectKey=letrasypapeles
-sonar.projectName=Letras & Papeles
+sonar.projectKey=backend
+sonar.projectName=backend
+sonar.projectVersion=1.0
+
 sonar.host.url=http://localhost:9000
-sonar.token=sqa_3d0585d22f9816c95871fa20a0eb04fd6fa72638
+sonar.token=sqp_43fb78ddf62871f3536f99b1bdf7eeef88ae47db
 
-sonar.java.binaries=target
+sonar.language=java
+sonar.sourceEncoding=UTF-8
+sonar.sources=src/main/java
+sonar.tests=src/test/java
+sonar.java.binaries=target/classes
 
+sonar.junit.reportPaths=target/surefire-reports
+sonar.java.coveragePlugin=jacoco
+sonar.jacoco.reportPaths=target/jacoco.exec
