Se corrige ProductoControllerTest para obtener 100% cobertura

--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,8 @@
                         <exclude>**/dto/**</exclude>
                         <exclude>**/hateoas/**</exclude>
                         <exclude>**/config/**</exclude>
+                        <exclude>**/BackendApplication*</exclude>
+
                         
                     </excludes>
                 </configuration>
