--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.level.org.springframework.security=DEBUG
 
 
 
+spring.web.resources.static-locations=classpath:/static/
+#springdoc.swagger-ui.path=/swagger-ui/index.html
