--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,8 @@ sonar.projectVersion=1.0
 sonar.host.url=http://localhost:9000
 sonar.token=sqp_43fb78ddf62871f3536f99b1bdf7eeef88ae47db
 
+sonar.exclusions=**/config/**,**/dto/**, **/entity/RoleEntity.java
+
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.sources=src/main/java
